# cligame

./: CLAUDE.md  README.md  a.m4a  main.py  pyproject.toml  semantic-library.md  剧本内容.md
docs/: prd.md  technical-design.md
src/cligame/: audio.py  cli.py  first_night_data.py  game.py  models.py  renderer.py  story_loader.py
src/cligame/content/art/endings/: ending_flight.txt  ending_marked.txt  ending_sealed.txt  ending_whisper.txt
src/cligame/content/corpus/: semantic-library.md
src/cligame/content/first_night/files/archive/: handbook.txt  incident_summary.txt  operator_memo.txt
src/cligame/content/first_night/files/audio/: residual_trace.txt
src/cligame/content/first_night/files/auth/: identity_map.redacted
src/cligame/content/first_night/files/camera/: frame_B.txt
src/cligame/content/first_night/files/protocols/: threshold_protocol.txt
src/cligame/content/stories/: first_story.json
tests/: test_game_flow.py  test_story_loader.py
